export const snapshot = {};

snapshot[`nu / darwin / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    let srcUrl = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let tmpFilePath = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$srcUrl)'#\\" ')\\"' '|' save --force \$\\"r#'(\$tmpFilePath)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dstFilePath | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dstFilePath)'#\\" \$\\"r#'(\$tmpFilePath)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dstFilePath)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$tmpFilePath)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_DIFF_PATH_PAIRS = [ r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/.config/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

file
"
`;

snapshot[`nu / darwin / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_FIND_KEYS = [ r#'fzf|theme.zsh, theme.ps1'#, r#'git|gitconfig'#, r#'nu|nu, env.nu, config.nu'#, r#'pwsh|pwsh, env.ps1, profile.ps1'#, r#'ssh|hushlogin, config'#, r#'zsh|zsh, zshenv, zshrc'# ]

file
\`
`;

snapshot[`nu / darwin / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  for dir in (\$env.FILE_SYNC_CLEAR_DIRS? | default []) {
    let dirParts = \$dir | split row '|'

    mut bin = ''
    for alias in (\$dirParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let dstFilePath = replaceEnv \$dirParts.1 | path expand
    opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dstFilePath)'#"
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    let srcUrl = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParentDirPath = \$dstFilePath | path dirname
    if (\$dstParentDirPath not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParentDirPath]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParentDirPath)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$srcUrl)'#" ')"' '|' save --force \$"r#'(\$dstFilePath)'#"
  }

  for perm in (\$env.FILE_SYNC_PATH_PERMS? | default []) {
    let permParts = \$perm | split row '|'

    mut bin = ''
    for alias in (\$permParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let cmd = replaceEnv \$permParts.1
    opPrintMaybeRunCmd ...(\$cmd | split row ' ')
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_SYNC_PATH_PAIRS = [ r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/.config/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

\$env.FILE_SYNC_CLEAR_DIRS = [ r#'nu|{HOME}/.config/nushell/autoload'#, r#'pwsh|{HOME}/.pwsh'#, r#'zsh|{HOME}/.zsh'# ]

\$env.FILE_SYNC_PATH_PERMS = [ r##'ssh|zsh --no-rcs -c r#'chmod -R a-s,u=rw,g=,o= '{HOME}/.ssh/config''#'## ]

file
\`
`;

snapshot[`nu / linux / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    let srcUrl = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let tmpFilePath = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$srcUrl)'#\\" ')\\"' '|' save --force \$\\"r#'(\$tmpFilePath)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dstFilePath | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dstFilePath)'#\\" \$\\"r#'(\$tmpFilePath)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dstFilePath)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$tmpFilePath)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_DIFF_PATH_PAIRS = [ r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/.config/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

file
"
`;

snapshot[`nu / linux / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_FIND_KEYS = [ r#'fzf|theme.zsh, theme.ps1'#, r#'git|gitconfig'#, r#'nu|nu, env.nu, config.nu'#, r#'pwsh|pwsh, env.ps1, profile.ps1'#, r#'ssh|hushlogin, config'#, r#'zsh|zsh, zshenv, zshrc'# ]

file
\`
`;

snapshot[`nu / linux / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  for dir in (\$env.FILE_SYNC_CLEAR_DIRS? | default []) {
    let dirParts = \$dir | split row '|'

    mut bin = ''
    for alias in (\$dirParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let dstFilePath = replaceEnv \$dirParts.1 | path expand
    opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dstFilePath)'#"
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    let srcUrl = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParentDirPath = \$dstFilePath | path dirname
    if (\$dstParentDirPath not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParentDirPath]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParentDirPath)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$srcUrl)'#" ')"' '|' save --force \$"r#'(\$dstFilePath)'#"
  }

  for perm in (\$env.FILE_SYNC_PATH_PERMS? | default []) {
    let permParts = \$perm | split row '|'

    mut bin = ''
    for alias in (\$permParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let cmd = replaceEnv \$permParts.1
    opPrintMaybeRunCmd ...(\$cmd | split row ' ')
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_SYNC_PATH_PAIRS = [ r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/.config/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

\$env.FILE_SYNC_CLEAR_DIRS = [ r#'nu|{HOME}/.config/nushell/autoload'#, r#'pwsh|{HOME}/.pwsh'#, r#'zsh|{HOME}/.zsh'# ]

\$env.FILE_SYNC_PATH_PERMS = [ r##'ssh|zsh --no-rcs -c r#'chmod -R a-s,u=rw,g=,o= '{HOME}/.ssh/config''#'## ]

file
\`
`;

snapshot[`nu / linux / find (with filter) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find/git?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/find/git'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

\$env.FILE_FIND_PARTS = r#'git'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_FIND_KEYS = [ r#'git|gitconfig'# ]

file
\`
`;

snapshot[`nu / linux / find (with sysHost) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=linux&sysHost=testhost'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.SYS_HOST = r#'testhost'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=testhost'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_FIND_KEYS = [ r#'fzf|theme.zsh, theme.ps1'#, r#'git|gitconfig'#, r#'nu|nu, env.nu, config.nu'#, r#'pwsh|pwsh, env.ps1, profile.ps1'#, r#'ssh|hushlogin, config'#, r#'zsh|zsh, zshenv, zshrc'# ]

file
\`
`;

snapshot[`nu / darwin / list 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/list?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/file/list'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

def fileOp [] {
  for pair in \$env.FILE_LIST_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    opPrint \$"(\$src) -> (\$dstFilePath)"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_LIST_PATH_PAIRS = [ r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/.config/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

file
\`
`;

snapshot[`nu / linux / list 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/list?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/file/list'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

def fileOp [] {
  for pair in \$env.FILE_LIST_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    opPrint \$"(\$src) -> (\$dstFilePath)"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_LIST_PATH_PAIRS = [ r#'fzf|fzf/theme.zsh|{HOME}/.fzf/theme.zsh'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/.config/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/.config/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/.config/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/.config/powershell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/.config/powershell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'#, r#'zsh|zsh/zsh/10-vim.zsh|{HOME}/.zsh/10-vim.zsh'#, r#'zsh|zsh/zshenv|{HOME}/.zshenv'#, r#'zsh|zsh/zshrc|{HOME}/.zshrc'# ]

file
\`
`;

snapshot[`nu / winnt / diff 1`] = `
"\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/diff?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$\\"(\$args | str join ' ')\\" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print --stderr
    return
  }

  \$\\"(ansi red)(\$args | str join ' ')(ansi reset)\\" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi green)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi yellow)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi blue)(\$args | str join ' ')(ansi reset)\\" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$\\"(\$args | str join ' ')\\" | print
    return
  }

  \$\\"(ansi magenta)(\$args | first)(ansi reset)\\" | print --no-newline
  if (\$args | length) > 1 {
    \$\\" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)\\" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$\\"(\$args | str join ' ')\\"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$\\"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting\\"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/file/diff'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  for pair in \$env.FILE_DIFF_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    let srcUrl = \$\\"(\$env.REQ_URL_CFG)/file/(\$src)\\"

    let tmpFilePath = opPrintRunCmd mktemp --suffix '.file.diff.tmp' --tmpdir
    opPrintMaybeRunCmd '\$\\"(' http get --raw --redirect-mode follow \$\\"r#'(\$srcUrl)'#\\" ')\\"' '|' save --force \$\\"r#'(\$tmpFilePath)'#\\"

    let diffCmd = if (which diff | is-not-empty) { 'diff' } else { 'fc' }

    if (\$dstFilePath | path exists) {
      opPrintMaybeRunCmd \$diffCmd \$\\"r#'(\$dstFilePath)'#\\" \$\\"r#'(\$tmpFilePath)'#\\" '|' complete '|' get stdout '|' str trim --right
    } else {
      opPrintWarn \$\\"\`(\$dstFilePath)\` does not exist\\"
    }

    opPrintRunCmd rm --force \$\\"r#'(\$tmpFilePath)'#\\"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$\\"{(\$e.0)}\\" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_DIFF_PATH_PAIRS = [ r#'fzf|fzf/theme.ps1|{HOME}/.fzf/theme.ps1'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/AppData/Roaming/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/AppData/Roaming/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/AppData/Roaming/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/Documents/PowerShell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/Documents/PowerShell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'# ]

file
"
`;

snapshot[`nu / winnt / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/find?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/file/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  for entry in \$env.FILE_FIND_KEYS {
    let parts = \$entry | split row '|'
    let keys = \$parts | get 0
    let ins = if (\$parts | length) > 1 { \$parts | get 1 } else { '' }

    mut bin = ''
    for alias in (\$keys | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    opPrint \$bin
    if (\$ins | is-not-empty) {
      opPrint \$"  (\$ins)"
    }
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_FIND_KEYS = [ r#'fzf|theme.zsh, theme.ps1'#, r#'git|gitconfig'#, r#'nu|nu, env.nu, config.nu'#, r#'pwsh|pwsh, env.ps1, profile.ps1'#, r#'ssh|hushlogin, config'# ]

file
\`
`;

snapshot[`nu / winnt / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/sync?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/file/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  for dir in (\$env.FILE_SYNC_CLEAR_DIRS? | default []) {
    let dirParts = \$dir | split row '|'

    mut bin = ''
    for alias in (\$dirParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let dstFilePath = replaceEnv \$dirParts.1 | path expand
    opPrintMaybeRunCmd rm --force --permanent --recursive \$"r#'(\$dstFilePath)'#"
  }

  mut createdDirs = []
  for pair in \$env.FILE_SYNC_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    let srcUrl = \$"(\$env.REQ_URL_CFG)/file/(\$src)"

    let dstParentDirPath = \$dstFilePath | path dirname
    if (\$dstParentDirPath not-in \$createdDirs) {
      \$createdDirs = \$createdDirs ++ [\$dstParentDirPath]
      opPrintMaybeRunCmd mkdir \$"r#'(\$dstParentDirPath)'#"
    }
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$srcUrl)'#" ')"' '|' save --force \$"r#'(\$dstFilePath)'#"
  }

  for perm in (\$env.FILE_SYNC_PATH_PERMS? | default []) {
    let permParts = \$perm | split row '|'

    mut bin = ''
    for alias in (\$permParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let cmd = replaceEnv \$permParts.1
    opPrintMaybeRunCmd ...(\$cmd | split row ' ')
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_SYNC_PATH_PAIRS = [ r#'fzf|fzf/theme.ps1|{HOME}/.fzf/theme.ps1'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/AppData/Roaming/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/AppData/Roaming/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/AppData/Roaming/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/Documents/PowerShell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/Documents/PowerShell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'# ]

\$env.FILE_SYNC_CLEAR_DIRS = [ r#'nu|{HOME}/AppData/Roaming/nushell/autoload'#, r#'pwsh|{HOME}/.pwsh'# ]

\$env.FILE_SYNC_PATH_PERMS = [ r##'ssh|pwsh -noprofile -c r#'icacls '{HOME}\\\\.ssh\\\\config' /t /reset'#'##, r##'ssh|pwsh -noprofile -c r#'icacls '{HOME}\\\\.ssh\\\\config' /t /inheritance:r /grant ":(gr,gw)"'#'## ]

file
\`
`;

snapshot[`nu / winnt / list 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/file/list?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/file/list'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

def fileOp [] {
  for pair in \$env.FILE_LIST_PATH_PAIRS {
    let pairParts = \$pair | split row '|'

    mut bin = ''
    for alias in (\$pairParts.0 | split row ',') {
      if (which \$alias | is-not-empty) {
        \$bin = \$alias
        break
      }
    }
    if (\$bin | is-empty) {
      continue
    }

    let src = \$pairParts.1 | str trim --left --char '/'
    let dstFilePath = replaceEnv \$pairParts.2 | path expand

    opPrint \$"(\$src) -> (\$dstFilePath)"
  }
}


def replaceEnv [line] {
  mut l = \$line
  if (\$l | str contains '{') {
    let itemsEnv = \$env | items { |key, value| [\$key, \$value] }
    for e in (\$itemsEnv | where { |e| ((\$e.0 | describe) == 'string') and ((\$e.1 | describe) == 'string') }) {
      \$l = \$l | str replace --all \$"{(\$e.0)}" (\$e.1)
    }
  }
  return \$l
}
def file [] {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use file (user) [y, [n]]: '#
  }
  if \$yn == 'n' {
    return
  }
  fileOp
}


\$env.FILE_LIST_PATH_PAIRS = [ r#'fzf|fzf/theme.ps1|{HOME}/.fzf/theme.ps1'#, r#'git|git/gitconfig|{HOME}/.gitconfig'#, r#'nu|nu/nu/10-vim.nu|{HOME}/AppData/Roaming/nushell/autoload/10-vim.nu'#, r#'nu|nu/env.nu|{HOME}/AppData/Roaming/nushell/env.nu'#, r#'nu|nu/config.nu|{HOME}/AppData/Roaming/nushell/config.nu'#, r#'pwsh|pwsh/pwsh/10-vim.ps1|{HOME}/.pwsh/10-vim.ps1'#, r#'pwsh|pwsh/env.ps1|{HOME}/Documents/PowerShell/env.ps1'#, r#'pwsh|pwsh/profile.ps1|{HOME}/Documents/PowerShell/profile.ps1'#, r#'ssh|ssh/hushlogin|{HOME}/.hushlogin'#, r#'ssh|ssh/config|{HOME}/.ssh/config'# ]

file
\`
`;
